# kibou

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  env.toml.sample
contrib/: kibou.nginx  kibou.service
migrations/2019-01-20-114604_initial_skeleton/: up.sql
migrations/2019-03-09-202703_add_follows/: down.sql  up.sql
migrations/2019-03-21-130335_implement_oauth/: down.sql  up.sql
migrations/2019-04-03-204320_introduce_ap_timeline_indices/: down.sql  up.sql
migrations/2019-04-22-180257_introduce_indices/: down.sql  up.sql
migrations/2019-06-09-220843_activitypub_data_indices/: down.sql  up.sql
migrations/2019-06-23-131810_notifications/: up.sql
src/: activity.rs  actor.rs  cache.rs  env.rs  html.rs  lib.rs  main.rs  notification.rs  timeline.rs
src/activitypub/: activity.rs  actor.rs  controller.rs  mod.rs  routes.rs  validator.rs
src/database/: mod.rs  models.rs  schema.rs
src/kibou_api/: account.rs  mod.rs  routes.rs  status.rs
src/mastodon_api/: account.rs  application.rs  controller.rs  mod.rs  routes.rs  status.rs  timeline.rs
src/oauth/: application.rs  authorization.rs  mod.rs  routes.rs  token.rs
src/raito_fe/: account.rs  api_controller.rs  mod.rs  renderer.rs  routes.rs  status.rs  timeline.rs
src/tests/: activity.rs  activitypub_actor.rs  activitypub_controller.rs  activitypub_validator.rs  actor.rs  html.rs  kibou_api.rs  kibou_api_account.rs  mod.rs  utils.rs
src/web/: federator.rs  http_signatures.rs  mod.rs
src/web_handler/: federator.rs  http_signatures.rs  mod.rs
src/well_known/: mod.rs  nodeinfo.rs  webfinger.rs
static/raito_fe/html/: about.html
static/raito_fe/js/: timeline.js
static/raito_fe/themes/: raito_light.css
templates/: oauth_authorization.html.tera
templates/raito_fe/: about.html.tera  account.html.tera  index.html.tera  infoscreen.html.tera  login.html.tera  notification_view.html.tera  settings.html.tera  status_post.html.tera  timeline_view.html.tera
templates/raito_fe/components/: notification.html.tera  status.html.tera  timeline.html.tera
