cargo-features = ["default-run"]

[package]
name = "kibou"
version = "0.1.0"
authors = ["Toromino <foxhkron@toromino.de>"]
default-run = "kibou_server"

[dependencies]
base64 = "0.10.1"
bcrypt = "0.4.0"
cached = "0.8.0"
chrono = "0.4.6"
config = "0.9.3"
diesel = { version = "1.4.2", features = ["chrono", "postgres", "serde_json"] }
getopts = "0.2.19"
lazy_static = "1.3.0"
openssl-sys = "0.9.46"
openssl = "0.10.22"
pem = "0.6.0"
regex = "1.1.6"
reqwest = "0.9.17"
rocket = "0.4.1"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
url = "1.7.2"
uuid = { version = "0.7.4", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["json", "serve", "tera_templates"]
