[package]
name = "kibou"
version = "0.1.0"
authors = ["Toromino <foxhkron@toromino.de>"]
default-run = "kibou_server"

[dependencies]
base64 = "0.11.0"
bcrypt = "0.6.1"
chrono = "0.4.10"
config = "0.10.1"
diesel = { version = "1.4.3", features = ["chrono", "postgres", "r2d2", "serde_json"] }
getopts = "0.2.21"
lazy_static = "1.4.0"
lru = "0.4.3"
openssl-sys = "0.9.53"
openssl = "0.10.26"
pem = "0.7.0"
regex = "1.3.1"
reqwest = "0.9.24"
rocket = "0.4.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
url = "2.1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "serve", "tera_templates"]
